When assigning symbol version, we should hide debug symbols defined in discarded sections from IR objects so that they can be removed later.

bfd 	PR ld/23818
 	* elflink.c (_bfd_elf_link_assign_sym_version): Hide symbols
 	defined in discarded input sections.

ld 	* testsuite/ld-plugin/lto.exp: Run PR ld/23818 test.
 	* testsuite/ld-plugin/pr23818.d: New file.
 	* testsuite/ld-plugin/pr23818.t: Likewise.
 	* testsuite/ld-plugin/pr23818a.c: Likewise.
 	* testsuite/ld-plugin/pr23818b.c: Likewise.